--- a/src/assets/styles/blog/blog-post.css
+++ b/src/assets/styles/blog/blog-post.css
@@ -1,5 +1,5 @@
 .container {
-  max-width: 85vw;
+  width: 100vw;
   margin-top: 5rem;
   padding: 2rem;
 }
@@ -213,6 +213,9 @@ body.dark .post-content code {
 }
 
 @media (max-width: 900px) {
+  .container {
+  max-width: 100vw;
+  }
   .blog-post {
     padding: 10px 10px;
   }
