--- a/src/assets/styles/contact.css
+++ b/src/assets/styles/contact.css
@@ -1,5 +1,5 @@
 .contact {
-  background-color: var(--contact-bg);
+  padding-top: 10%;
   padding: var(--section-padding);
   width: 100%;
   box-sizing: border-box;
